# ide

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/context-manager/: USAGE.md
.claude/context-manager/__tests__/: integration.test.ts  test-utils.ts
.claude/context-manager/core/: index.ts
apps/desktop/: package.json
apps/desktop/scripts/: prepare.cjs
apps/desktop/src/: auto-updater.cjs  config-manager.cjs  index.html  main.cjs  preload.cjs  renderer.js  window-manager.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  server.rs  window.rs
apps/server/src/: index.js  server.ts  websocket.ts
apps/server/src/mcp/: server.ts
apps/server/src/middleware/: auth.ts
apps/server/src/routes/: agent-bridge.ts  git.ts  shared-resources.ts  terminals.ts
apps/web/: index.html  package.json  vite.config.js
apps/web/public/: README.md  sw.js
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
apps/web/src/components/: ContextStatus.tsx  DeckList.tsx  EditorPane.tsx  EnvironmentModal.tsx  FileTree.tsx  GlobalStatusBar.tsx  SideNav.tsx  TerminalGroupHeader.tsx  TerminalPane.tsx  TerminalTile.tsx  WorkspaceList.tsx
apps/web/src/hooks/: useDecks.ts
apps/web/src/utils/: stateUtils.ts
docs/ja/: .gitkeep  README.md
docs/plans/: 2025-02-03-multiplatform-ide.md
